<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25sp"
        tools:context=".ui.HomeFragment">

    <!--  Text view to display homepage title  -->
    <TextView
            android:id="@+id/homepageTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/homepageTitle"/>

    <!--  Text view to display app description in homepage  -->
    <TextView
            android:id="@+id/homepageDescription"
            app:layout_constraintTop_toBottomOf="@+id/homepageTitle"
            android:layout_marginTop="12sp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/homepageDescription"/>

    <!--  Text view to display depression prediction result  -->
    <TextView
            android:id="@+id/depressionPrediction"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/homepageDescription"
            android:textStyle="bold"
            android:text="@string/depressionPrediction"/>

    <!--  Image view to display preview from the uploaded image  -->
    <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@id/homepageDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:background="#E0E0E0"
            android:contentDescription="@string/image_preview_desc"/>

    <!--  Button to open camera to take photo  -->
    <Button
            android:id="@+id/openCameraBtn"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/darkblue"
            android:text="@string/openCameraBtn"/>

    <!--  Text view to display 'OR' text to tell the alternatives  -->
    <TextView
            android:id="@+id/orText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/openCameraBtn"
            android:text="@string/text_or"/>

    <!--  Button to select an image from storage  -->
    <Button
            android:id="@+id/selectImagebtn"
            app:layout_constraintTop_toBottomOf="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/darkblue"
            android:text="@string/selectImageButton"/>

    <!--  Button to upload the photo and classify whether facial expression is depressed/not  -->
    <Button
            android:id="@+id/uploadImageBtn"
            app:layout_constraintTop_toBottomOf="@+id/selectImagebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            android:textColor="@color/black"
            android:backgroundTint="@color/cream"
            android:text="@string/uploadImageButtom"/>

</androidx.constraintlayout.widget.ConstraintLayout>