<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25sp"
        tools:context=".ui.auth.RegisterFragment">

    <!-- Display full name input text -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldFullName"
            android:layout_width="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="@color/darkblue"
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFullName"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Display username input text -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="@color/darkblue"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/textFieldFullName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Display email input text -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="@color/darkblue"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/textFieldUsername"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Display password input text -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="@color/darkblue"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Display submit button -->
    <Button
            android:id="@+id/registerBtn"
            android:text="@string/btnSubmit"
            app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/darkblue"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>