<?xml version="1.0" encoding="utf-8"?>

<!-- Menggunakan contstraint layout agar lebih mudah mengatur posisi elemen -->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25sp"
        tools:context=".ui.ArticleFragment">

    <!-- Menggunakan material card sebagai tampilan dasar input untuk search dan sort article -->
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <!-- Susun elemen secara horizontal dengan linear layout -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/lightcream"
                android:gravity="center_vertical">

            <!-- Tampilkan input text untuk cari artikel -->
            <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_hint_article"/>

            <!-- Tampilkan tombol sort artikel -->
            <ImageButton
                    android:id="@+id/buttonFilter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_filter"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/cd_filter_article"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Menggunakan Recycler View untuk menampilkan card artikel-artikel -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArticles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_article"

            app:layout_constraintTop_toBottomOf="@id/cardSearch"
            app:layout_constraintBottom_toTopOf="@+id/layout_pagination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <!-- Menggunakan Linear Layout untuk menyusun elemen-elemen paginator secara horizontal -->
    <LinearLayout
            android:id="@+id/layout_pagination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <!-- Tampilkan tombol "Sebelumnya" untuk pindah ke halaman sebelumnya jika ada -->
        <Button
                android:id="@+id/buttonPrevPage"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:text="@string/pagination_previous"/>

        <!-- Tampilkan user sedang di halaman ke berapa -->
        <TextView
                android:id="@+id/textViewPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                tools:text="Halaman: 1"/>

        <!-- Tampilkan tombol "Berikutnya" untuk pindah ke halaman berikutnya jika ada -->
        <Button
                android:id="@+id/buttonNextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkblue"
                android:text="@string/pagination_next"/>
    </LinearLayout>

    <!-- Tampilkan logo loading saat mengambil data -->
    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/layout_pagination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardSearch"/>

    <!-- Tampilka teks "Gagal memuat data" jika gagal memuat data dari API -->
    <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="Gagal memuat data"
            app:layout_constraintBottom_toTopOf="@id/layout_pagination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardSearch"/>

    <!-- Tampilkan tombol back to top jika user sudah scroll halaman ke bawah -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScrollToTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/cd_scroll_to_top"
            android:backgroundTint="@color/darkblue"
            android:src="@drawable/ic_arrow_upward"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/layout_pagination"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>