<?xml version="1.0" encoding="utf-8"?>
<!-- Agar user dapat scroll tampilan -->
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ArticleDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

        <!-- Tampilkan gambar utama berita -->
        <ImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

        <!-- Tampilkan judul berita -->
        <TextView
                android:id="@+id/textViewTitleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Judul Artikel" />

        <!-- Tampilkan sumber berita -->
        <TextView
                android:id="@+id/textViewSourceDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintTop_toBottomOf="@id/textViewTitleDetail"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Sumber Berita" />

        <!-- Tampilkan kategori berita -->
        <TextView
                android:id="@+id/textViewDescriptionDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toBottomOf="@id/textViewSourceDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Deskripsi Artikel." />

        <!-- Tampilkan tombol untuk mengarahkan user membaca di halaman asli berita di browser handphone -->
        <Button
                android:id="@+id/buttonReadMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/article_read_more"
                app:layout_constraintTop_toBottomOf="@id/textViewDescriptionDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Tampilkan judul bagian komentar -->
        <TextView
                android:id="@+id/textViewCommentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_comments_header"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintTop_toBottomOf="@id/buttonReadMore"
                app:layout_constraintStart_toStartOf="parent" />

        <!-- Gunakan ReyclerView untuk menampung isi komentar pada list_item_comment.xml -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/textViewCommentHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/list_item_comment"
                tools:itemCount="2" />

        <!-- Tampilkan text input untuk memasukkan komentar -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:hintTextColor="@color/darkblue"
                android:hint="@string/article_comment_hint"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewComments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonAddComment">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tampilkan button untuk memasukkan komentar -->
        <Button
                android:id="@+id/buttonAddComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/article_comment_send"
                app:layout_constraintTop_toTopOf="@id/textFieldComment"
                app:layout_constraintBottom_toBottomOf="@id/textFieldComment"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>